# football-analytics

./: .gitignore  CONTRIBUTING_GUIDELINES.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .flake8  Dockerfile  docker-compose.yml  jupyter_config.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  app_core.py  config.py  main.py  main_simple.py
backend/app/api/: __init__.py  middleware.py
backend/app/api/routes/: Untitled-1.py  __init__.py  analytics.py  auth.py  favorites.py  injuries.py  leagues.py  live.py  matches.py  players.py  predictions.py  teams.py
backend/app/core/: config.py  mcp_client.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/ml_models/: __init__.py  base_model.py  cards_predictor.py  goals_predictor.py  match_outcome.py  model_trainer.py
backend/app/services/: __init__ 2.py  __init__.py  calculator.py  data_collector.py  live_tracker.py  odds_calculator.py  predictor.py
backend/app/tests/: __init__.py  test_api.py  test_models.py  test_predictions.py
backend/app/utils/:  validators.py  __init__.py  constants.py  helpers.py  logger_config.py
backend/football_env/: pyvenv.cfg
database/: __init__.py
docs/: API.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: GitHubCopilotIcon.tsx
frontend/src/components/Analytics/: ComparisonTool.jsx  PredictionCharts.jsx  StatisticsPanel.jsx
frontend/src/components/Common/: ErrorBoundary.jsx  Header.jsx  Loading.jsx  Sidebar.jsx
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.jsx  StatsCards.jsx
frontend/src/components/Leagues/: LeagueDetail.jsx  LeaguesList.jsx
frontend/src/components/Matches/: LiveMatch.jsx  MatchDetail.jsx  MatchList.jsx  MatchPrediction.jsx
frontend/src/components/Players/: InjuriesList.jsx  PlayerDetail.jsx  PlayersList.jsx
frontend/src/components/Teams/: TeamDetail.jsx  TeamStats.jsx  TeamsList.jsx
frontend/src/context/: AppContext.js  AuthContext.js
frontend/src/hooks/: useApi.js  useLocalStorage.js  useWebSocket.js
frontend/src/services/: api.js  auth.js  websocket.js
frontend/src/utils/: constants.js  formatters.js  helpers.js
scripts/: run_dev.sh  setup.sh
